--- a/src/main/cool/src/assets/css/cool-custom.css
+++ b/src/main/cool/src/assets/css/cool-custom.css
@@ -350,3 +350,24 @@ span.icon-close {
 .cui .review-status .panel--ltgray {
   margin: -15px;
 }
+
+
+/* Offer Detail */
+.cui .timeline__icon {
+  border-radius: 50%;
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  left: 5px;
+  z-index: 2;
+  border: 5px solid #f5f5f6;
+  background-color: #6ebe4a;
+  color: white;
+  line-height: 1;
+  top: 2px;
+}
+
+.cui .timeline__icon span {
+  left: 4px;
+  top: 3px;
+}
